--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <canvas id="canv"> </canvas>
     <script>
-var c = document.getElementById('canv:').getContext('2d'), FPS = 60, wW = 10,
+var c = document.getElementById('canv').getContext('2d'), FPS = 60, wW = 10,
     w = window.innerWidth, h = window.innerHeight, pSz = 20, r = false, int,
     sp = 10, sc = 0, pX = 100, pDir = 1, es = [], pY = h - pSz - 10, ez = 20;
 c.canvas.width = w; c.canvas.height = h;
