Added better index.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>xeeny.pl</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1 id="logo">xeeny.pl</h1>
+    <nav>
+        <a href="/">/me</a> |
+        <a href="https://github.com/xeenypl">/code</a> |
+        <a href="https://github.com/xeenypl">/dev</a> |
+        <a href="##">/posts</a>
+    </nav>
+    <hr>
+    <p>
+       Hi, I'm xeeny, a Polish self proclaimed hacker, and system programmer.
+    </p>
+
+    <h4>How you can reach me:<h4>
+    <ul>
+        <li>by main: xeeny@wp.pl</li>
+        <li>on discord: xeeny</li>
+    </ul>
+
+    <h4>I Like:<h4>
+    <ul>
+        <li>System programing</li>
+        <li>Minimalistic softwere</li>
+        <li>Anime/manga</li>
+        <li>Video games</li>
+        <li>Languages (but I cannot speek many)</li>
+    </ul>
+
+    <h4>I know:<h4>
+    <ul>
+        <li>C (and i love it (but is't one sided love))</li>
+        <li>C++ (just a littel bit but steel regret it)</li>
+        <li>Linux (but preaty match can not use widnows)</li>
+        <li>Javascript (+ typescript, react, koa and express)</li>
+    </ul>
+
+    <h4>You want to supprt me:<h4>
+    <ul>
+        <li>Patreon</li>
+        <li>Patronite</li>
+        <li><a href="https://ko-fi.com/xeeny">Ko-fi</a></li>
+    </ul>
 </body>
 </html>
