Remove unnesesery links.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="/">/me</a> |
         <a href="https://github.com/xeenypl">/code</a> |
         <a href="https://github.com/xeenypl">/dev</a> |
-        <a href="##">/posts</a>
+        <a href="/post.html">/posts</a>
     </nav>
     <hr>
     <p>
@@ -43,8 +43,6 @@
 
     <h4>You want to supprt me:<h4>
     <ul>
-        <li>Patreon</li>
-        <li>Patronite</li>
         <li><a href="https://ko-fi.com/xeeny">Ko-fi</a></li>
     </ul>
 </body>
